--- a/src/part1/index.html
+++ b/src/part1/index.html
@@ -6,6 +6,6 @@
     <title>To Dos</title>
 </head>
 <body>
-    <script type="module" src="./async.js"></script>
+    <script type="module" src="./app.js"></script>
 </body>
 </html>
